<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MenuActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="148dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/maxiquickeat" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="163dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/times_new_roman"
            android:text="@string/maxiquickeat"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="163dp"
            android:layout_height="47dp"
            android:layout_marginTop="24dp"
            android:background="#000000"
            android:fontFamily="@font/times_new_roman"
            android:text="@string/commander"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="192dp"
            android:layout_height="200dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/doublecheese" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="163dp"
            android:layout_height="47dp"
            android:layout_marginTop="116dp"
            android:fontFamily="@font/times_new_roman"
            android:text="@string/doublecheese"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="163dp"
            android:layout_height="47dp"
            android:layout_marginTop="96dp"
            android:fontFamily="@font/times_new_roman"
            android:text="@string/rustik"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="163dp"
            android:layout_height="47dp"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/times_new_roman"
            android:text="@string/burgerbacon"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="161dp"
            android:layout_height="43dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/times_new_roman"
            android:text="@string/fishburger"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button3"
            android:layout_width="163dp"
            android:layout_height="47dp"
            android:background="#000000"
            android:fontFamily="@font/times_new_roman"
            android:text="@string/commander"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/button2"
            android:layout_width="163dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:background="#000000"
            android:fontFamily="@font/times_new_roman"
            android:text="@string/commander"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="163dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:background="#000000"
            android:fontFamily="@font/times_new_roman"
            android:text="@string/commander"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="163dp"
            android:layout_height="47dp"
            android:background="#000000"
            android:fontFamily="@font/times_new_roman"
            android:text="@string/commander"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="192dp"
            android:layout_height="173dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:srcCompat="@drawable/frites_rustik" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="187dp"
            android:layout_height="156dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/burgerbacon" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="188dp"
            android:layout_height="146dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:srcCompat="@drawable/burgerfish" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>